<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/nev"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserEmail"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:hapticFeedbackEnabled="false"
        android:onClick="login"
        android:text="@string/bejelentkezes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.100000024"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:onClick="register"
        android:text="@string/regist"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>
