<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:scrollbars="vertical"
    tools:context=".RegistActivity">

    <TextView
        android:id="@+id/registLable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/regist"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeMinTextSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/registEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registLable"
        app:layout_constraintVertical_bias="0.25"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/registNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/nev"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registEmailText"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/memberId"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registNameText"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/registPassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registNumberText"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/registOkButton"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:backgroundTint="#FF5722"
        android:text="@string/regist"
        android:textColorLink="#FFFFFF"
        android:onClick="resist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/registCancelButton"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:backgroundTint="#FF5722"
        android:text="@string/cancel"
        android:onClick="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Spinner
        android:id="@+id/elofizetesTipus"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registPassText"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>